--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: please enter your name
+disqus_short_name: summerlize
 disqus_show_comment_count: true
 
 # Google Analytics
