--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ date_format: "ordinal"
 subscribe_rss: # /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:summerlize@gmail.com
+email: "summerlize@gmail.com"
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -90,7 +90,7 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name: "summerlize"
+disqus_short_name: summerlize
 disqus_show_comment_count: true
 
 # Google Analytics
