--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ disqus_short_name: summerlize
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-78711361-1
 
 # Facebook
 facebook_user:
